<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_marginLeft="330dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="800dip"
                android:layout_height="wrap_content"
                android:background="@drawable/word_top_bg"
                android:gravity="center_vertical|left"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtWordTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="800dip"
                android:layout_height="400dip"
                android:background="@drawable/word_bg" >

                <WebView
                    android:id="@+id/docView"
                    android:layout_width="800dip"
                    android:layout_height="400dip"
                    android:layout_centerInParent="true" />

                <LinearLayout
                    android:id="@+id/loadingLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <ProgressBar
                        android:id="@+id/progressbar"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading_word_msg"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtWordFailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/loading_fail"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grid_bg"
            android:gravity="center_vertical|left"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="220dip"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textScaleX="1"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/grid_line" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="30dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/browse_icon_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/lianxi_margin_left"
                    android:gravity="center"
                    android:text="@string/browse_title"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="55dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/phone_icon_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/lianxi_margin_left"
                    android:text="@string/phone_title"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtBackHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="300dip"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/back_sou"
                android:textColor="@color/text_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtBackUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dip"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/back_up"
                android:textColor="@color/text_color"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnHujiao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_hujiao_bg" />

    <Button
        android:id="@+id/btnYulei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btnHujiao"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_yulei_bg" />

</RelativeLayout>