<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/pduLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="300dip" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pduLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grid_bg"
            android:gravity="center_vertical|left"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/grid_line" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="100dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/browse_icon_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/lianxi_margin_left"
                    android:gravity="center"
                    android:text="@string/browse_title"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="155dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/phone_icon_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/lianxi_margin_left"
                    android:text="@string/phone_title"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtBackHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="350dip"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/back_sou"
                android:textColor="@color/text_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtBackUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dip"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/back_up"
                android:textColor="@color/text_color"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnHujiao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_hujiao_bg" />

    <Button
        android:id="@+id/btnYulei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btnHujiao"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_yulei_bg" />

</RelativeLayout>