<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/grid_info_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smset_title"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="@dimen/sms_layout_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:gravity="left|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/sms_textview_right_layout_width"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/info_host"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/editHost"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sms_rightlayout_margin_left"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/sms_layout_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnCommit"
                    android:layout_width="300dip"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_confirn_title"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="@dimen/sms_layout_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:gravity="left|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/sms_textview_right_layout_width"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/info_password"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sms_rightlayout_margin_left"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/sms_layout_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnShowPassword"
                    android:layout_width="300dip"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_confirn_title"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnHujiao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_hujiao_bg" />

    <Button
        android:id="@+id/btnYulei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btnHujiao"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_yulei_bg" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/btn_back_bg" />

</RelativeLayout>